finally fixed navbar being overlapped by content

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header  {
     top: 0;
     width: 100%;
     margin-bottom: 35px;
+    z-index: 100;
 }
 
 body    {
@@ -56,4 +57,13 @@ nav a   {
 
 .peepositwave   {
     width: 100px;
+}
+
+.something-section {
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(15px); 
+    -webkit-backdrop-filter: blur(15px);
+    border-radius: 10px;
+    width: 500px;
+    
 }
